# gEmuBoy

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: testboy.yaml
cmake/: CompilerWarnings.cmake  ProjectExtra.cmake  Sanitizers.cmake
include/: cartridge.h  cpu.h  cpu_utils.h  cpudef.h  debugger.h  decode.h  defs.h  gb.h  gb_utils.h  gbtypes.h  instr.h  interrupt.h  joypad.h  lcd.h  load.h  log.h  memmap.h  mmu.h  ppu.h  timer.h  type.h  win_utils.h
include/cartridge/: cartridge.h  mbc.h
include/cpu/: cpu.h  decode.h  instr.h  interrupt.h  timer.h
include/graphics/: ppu.h
src/: cartridge.c  cpu.c  debugger.c  gb.c  interrupt.c  lcd.c  load.c  log.c  main.c  mmu.c  ppu.c  timer.c  win_utils.c
src/cartridge/: cartridge.c  mbc.c
src/cpu/: cpu.c  interrupt.c  timer.c
src/graphics/: lcd.c  ppu.c
test/: CMakeLists.txt  testboy.sh
test/gb-test-roms/mooneye-gb-test-roms/emulator-only/mbc1/: bits_bank2.sav
test/include/: custom_io.h  test_exec.h
test/mooneye-gb-test-roms/emulator-only/mbc1/: bits_mode.sav
test/src/: custom_io.c  main.c  testboy.c
